@@ -20,68 +20,3 @@
 #include "libgame.h"
 #include "libgame_private.h"
 
-
-LIGGAME_EXPORT SDL_Window *
-setup_main_window(char *name, uint32_t size_x, uint32_t size_y, unsigned char f)
-{
-	int err = SDL_Init(SDL_INIT_EVERYTHING);
-	if (err < 0)
-		err_sdl_and_ret("could not init SDL", NULL);
-
-	/*
-	 * TODO: use flags
-	 */
-	uint32_t flags = 0;
-	switch(f) {
-
-	default:
-		printf("use default settings\n");
-		f = SDL_WINDOW_SHOWN;
-	}
-	SDL_Window *window = SDL_CreateWindow(name,
-					      SDL_WINDOWPOS_CENTERED,
-					      SDL_WINDOWPOS_CENTERED,
-					      size_x, size_y,
-					      flags);
-	if (window == NULL)
-		err_sdl_and_ret("could not create main window", NULL);
-
-	return window;
-}
-
-LIGGAME_EXPORT SDL_Renderer *
-setup_renderer(SDL_Window *window, color_t *b)
-{
-	SDL_Renderer *renderer = SDL_CreateRenderer(window, -1, SDL_RENDERER_ACCELERATED);
-	if (renderer == NULL)
-		err_sdl_and_ret("could not create renderer", NULL);
-
-	int err = -1;
-	if (b == NULL)
-		err = SDL_SetRenderDrawColor(renderer, 0, 150, 0, 255);
-	else
-		err = SDL_SetRenderDrawColor(renderer, b->r, b->g, b->b, b->a);
-
-	if (err < 0)
-		err_sdl_and_ret("could not set color", NULL);
-
-	return renderer;
-}
-
-LIGGAME_EXPORT void
-cleanup_main_window(SDL_Window *window, SDL_Renderer *renderer)
-{
-	printf("cleanup all SDL related stuff\n");
-
-	if (renderer != NULL)
-		SDL_DestroyRenderer(renderer);
-	else
-		printf("renderer == NULL\n");
-
-	if (window != NULL)
-		SDL_DestroyWindow(window);
-	else
-		printf("window == NULL\n");
-
-	SDL_Quit();
-}
