@@ -2,6 +2,12 @@
 # some news ... see also TODO for hints
 #
 
+2017-09-11 -> add fullscreen kdo arg to hello_sdl
+	   -> fix wrong usage of accel and velo in input_control example
+	   -> add init_game_object_simple() wich uses SDL_QueryTexture to get
+	      the size of the texture
+	   -> add skeleton for follow_mouse click example
+	   -> add some more event "handler" in input_control
 
 2017-09-10 -> fix joystick -> let both (i have only two) control the astronaut
 
